--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                              <div class="flex items-start gap-4">
                                 <div class="flex-shrink-0 bg-green-100 text-green-600 rounded-full p-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.364 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.196-1.538-1.118l1.518-4.674a1 1 0 00-.364-1.118L2.44 9.099c-.783-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" /></svg></div>
                                 <div>
-                                    <h4 class="font-bold text-lg" data-lang-key="about_point3_title">متحدث دولي وحائز على جوائز</h4>
-                                    <p class="text-gray-600" data-lang-key="about_point3_desc">متحدث في العديد من المؤتمرات الدولية، وحائز على جائزة "النجم الصاعد" من المؤتمر الدولي للتجميل (ICC)، مما يعكس شغفه بالتطوير المستمر ومشاركة المعرفة.</p>
+                                    <h4 class="font-bold text-lg" data-lang-key="about_point3_title">متحدث بالمؤتمرات العلميه </h4>
+                                    <p class="text-gray-600" data-lang-key="about_point3_desc">متحدث و منظم في العديد من المؤتمرات الالمختصه بجراحات التجميل، مما يعكس شغفه بالتطوير المستمر ومشاركة المعرفة.</p>
                                 </div>
                             </div>
                         </div>
