--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                 <div class="flex-shrink-0 bg-blue-100 text-blue-600 rounded-full p-3"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path d="M12 14l9-5-9-5-9 5 9 5z" /><path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-5.998 12.078 12.078 0 01.665-6.479L12 14z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-5.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222 4 2.222V20M12 14.75L2 10l10-5.25L22 10l-10 4.75z" /></svg></div>
                                 <div>
                                     <h4 class="font-bold text-lg" data-lang-key="about_point1_title">مؤهلات علمية وخبرة عملية</h4>
-                                    <p class="text-gray-600" data-lang-key="about_point1_desc">استشاري جراحة التجميل والإصلاح، حاصل على درجة الدكتوراه والزمالة المصرية. عضو الجمعية المصرية لجراحي التجميل والإصلاح (ESPRS) وصاحب خبرة واسعة في كبرى المستشفيات التعليمية والعسكرية.</p>
+                                    <p class="text-gray-600" data-lang-key="about_point1_desc">استشاري جراحة التجميل والإصلاح، حاصل على درجة الدكتوراه والزمالة المصرية. عضو الجمعية المصرية لجراحي التجميل والإصلاح (ESPRS) وصاحب خبرة واسعة في كبرى المستشفيات.</p>
                                 </div>
                             </div>
                             <div class="flex items-start gap-4">
