--- a/cv/index.html
+++ b/cv/index.html
@@ -398,7 +398,7 @@
 
         window.addEventListener('load', () => {
             adjustContentPadding();
-            setLanguage('ar');
+            setLanguage('en');
         });
         window.addEventListener('resize', adjustContentPadding);
     </script>
